--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Dogs Gallery</string>
+    <string name="breeds_list">Breeds List</string>
+    <string name="search">Search</string>
+    <string name="random">Random</string>
 </resources>
